--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@ a{
  img{
     width: 100%;
  }
+ h3{
+    font-size: 26px;
+    font-weight: 300;
+ }
 
  h4{
     color: #1CE784;
@@ -51,6 +55,18 @@ a{
     background-color:#1CE784;
     cursor: pointer;
  }
+ .btn-outline{
+    
+    background: none;
+    color: #fff;
+    border:2px solid #fff ;
+    padding: 18px 40px;
+ }
+
+ .btn-outline:hover{
+    color: #000;
+    background-color: #fff;
+ }
 
  .btn-cta:hover{
     opacity: 0.7;
@@ -62,6 +78,14 @@ a{
    margin-top:15px ; 
 }
 
+.sub-link{
+    display: block;
+    color: #ccc;
+    font-size: 12px;
+    margin-top: 5px;
+    text-decoration: underline;
+    justify-content: center;
+}
  .header{
     height: 530px;
     background: url(/header.jpeg) no-repeat center center / cover;
@@ -106,6 +130,20 @@ a{
  }
 
 
+.sub-header{
+    display: grid;
+    grid-template-columns: 2fr 4fr 2fr;
+    gap:40px;
+    align-items: center;
+    padding: 30px 40px;
+    background: linear-gradient(
+        318.68deg,
+        #0f495c 0%,
+        #0d3640 49.72%,
+        #08141f 100%
+    );
+}
+
  @media(max-width:768px){
     .header .logo{width:250px}
 
@@ -116,9 +154,7 @@ a{
     .btn .btn-cta{
         width: 50px;
     }
-
     .btn{
         padding: 25px 40px;
-       
     }
  }
