--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,18 @@ a{
     font-size: 12px;
     margin-top: 5px;
     text-decoration: underline;
-    
+}
+
+.text-xl{
+    font-size: 70px;
+    font-weight: bold;
+}
+
+.sub-text{
+    max-width: 850px;
+    margin-bottom: 10px;
+    font-size: 24px;
+
 }
  .header{
     height: 530px;
@@ -155,6 +166,36 @@ a{
     text-align: center;
 }
 
+.categories{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 90px 40px;
+    justify-content: center;
+}
+ .categories .covers{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-top: 40px;
+    gap: 20px;
+ }
+
+ .categories .covers > div{
+    height: 500px;
+    width: 300px;
+    position: relative;
+ }
+
+ .categories .cover-grade{
+   background: linear-gradient(
+    156.82deg,
+    rgba(0,0,0,0.6) 4.58%,
+    rgba(0,0,0,0)69.61%
+   ),
+   linear-gradient(24.5deg, rgba(0,0,0,0.2) 4.71%, rgba(0,0,0,0)71.49%);
+
+ }
  @media(max-width:768px){
     .header .logo{width:250px}
 
