--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,15 @@ a{
  .cover-4 {
      background: url(./cover-4.jpeg)no-repeat center center/cover;
  }
+
+
+ @media(max-width: 1100px){
+.categories .covers {
+        grid-template-columns: 1fr 1fr;
+    }
+
+
+ }
  @media(max-width:768px){
     .header .logo{width:250px}
 
@@ -277,4 +286,17 @@ a{
         align-self: center;
     }
     
+    .text-xl{
+        line-height: 1.3;
+        font-size: 50px;
+        
+    }
+
+    .sub-text{
+        font-size:20px ;
+    }
+
+    .categories .covers{
+        grid-template-columns: 1fr;
+    }
  }
