--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,14 @@ a{
     opacity: 0.7;
  }
 
+ .live{
+    padding: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+ }
 .legal-text{
    font-size: 10px;
    color: #ccc;
