--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,40 @@ a{
  }
 
 
+.live-sports{
+   background: url(/live-sports.jpeg) no-repeat center center / cover; 
+   height: 800px;
+   position: relative;
+}
+
+.live-sports-content{
+    position: absolute;
+    top: 160px;
+    left: 100px;
+    max-width: 550px;
+}
+
+.live-sports-logos{
+    width: 300px;
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.live-sports-logos > div{
+    background: url(/network-logo-bg.png) no-repeat center center / cover;
+    height:60px;
+    width: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.live-sports-logos img{
+    width: 40px;
+}
+
  @media(max-width: 1100px){
 .categories .covers {
         grid-template-columns: 1fr 1fr;
