--- a/styles.css
+++ b/styles.css
@@ -292,6 +292,38 @@ a{
     width: 40px;
 }
 
+.footer{
+    background: #ebedf2;
+    color: #333;
+}
+
+.footer a{
+    color: #333;
+}
+
+.footer-container{
+    max-width: 1110px;
+    margin: auto;
+    padding: 40px; 
+}
+
+.footer-lists{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-lists .list-head{
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.divider{
+    width: 100%;
+    height: 3px;
+    border-top: 1px #ccc solid;
+    margin-bottom: 30px 0;
+}
  @media(max-width: 1100px){
 .categories .covers {
         grid-template-columns: 1fr 1fr;
@@ -362,6 +394,10 @@ a{
         left: 30px;
         margin-top: 65px;
 
+    }
+
+    .footer-lists{
+        flex-direction: column;
     }
 
  }
