--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,10 @@ a{
     background-color: #fff;
  }
 
+ .btn-dark{
+    background: #000;
+    color: #fff;
+ }
  .btn-cta:hover{
     opacity: 0.7;
  }
@@ -324,6 +328,76 @@ a{
     border-top: 1px #ccc solid;
     margin-bottom: 30px 0;
 }
+
+.modal{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0,0.5);
+}
+
+.modal-box{
+    margin: 10% auto;
+    width: 580px;
+    background: #fff;
+    color: #333;
+    position: relative;
+}
+
+.modal-body{
+padding: 50px;
+}
+
+.modal-body h3{
+  font-weight: bold;  
+}
+
+.modal-body .btn{
+    width: 100%;
+    margin-top: 30px;
+}
+
+.modal .close{
+    cursor: pointer;
+    height: 23px;
+    width: 23px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.modal .modal-footer{
+    background: #fff;
+    color: #333;
+    padding: 50px 0;
+    text-align: center;
+}
+
+.modal .modal-footer a{
+    color: steelblue;
+}
+
+.form-control{
+    margin: 20px 0;
+}
+
+.form-control label{
+    display: block;
+    text-transform: uppercase;
+}
+
+.form-control input{
+    width: 100%;
+    border: 2px #ccc solid;
+    border-radius: 5px;
+    height: 50px;
+    padding: 5px;
+}
+
  @media(max-width: 1100px){
 .categories .covers {
         grid-template-columns: 1fr 1fr;
@@ -399,5 +473,9 @@ a{
     .footer-lists{
         flex-direction: column;
     }
+   .modal-box{
+    width: 350px;
+   }
+
 
  }
