--- a/styles.css
+++ b/styles.css
@@ -346,8 +346,12 @@ a{
     background: #fff;
     color: #333;
     position: relative;
+    animation: modalopen 1s;
 }
-
+@keyframes modalopen{
+    from { opacity: 0;}
+    to { opacity: 1; }
+}
 .modal-body{
 padding: 50px;
 }
