fixed spelling errors and added open source tag

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,14 @@ a{
     font-weight: 400;
  }
 
+small {
+    text-decoration: underline;
+    text-align: center;
+    display: block;
+   
+   
+}
+
  .btn{
     display: inline-block;
     background: #fff;
